<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2">
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calorie Calculator"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How many calories I need a day?"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gender"
            android:textColor="@color/colorBlack"
            android:id="@+id/textViewGender"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:id="@+id/spnGender"
            android:background="@color/colorAccent"
            >
        </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_marginLeft="15dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewWeight"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextWeight"
                android:hint="@string/e_weight"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorAccent"
                android:layout_marginLeft="150dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Age"
                android:layout_marginLeft="15dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewAge"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAge"
                android:hint="@string/enter_age"
                android:layout_marginLeft="170dp"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorAccent"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:layout_marginLeft="15dp"
                android:id="@+id/textViewHeight"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextHeight"
                android:hint="@string/e_height"
                android:layout_marginLeft="150dp"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorAccent"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCount"
            android:text="@string/Calculate"
            android:layout_marginLeft="200dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear"
            android:text="@string/Clear"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewResult"
        android:text="@string/Result"
        android:textSize="30sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorBlack"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/w3"/>
        </LinearLayout>